--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.2.0",
+    "random-friendly-id": "^1.0.0",
     "socket.io": "^2.2.0"
   }
 }
